Back to 'original' for Monday

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -74,59 +74,43 @@
             <div id = "inCenterTests" class = "tests">
 
                 <div class = "gridBox">
-                    MC3
+                    <p>MC3</p>
                 </div>
 
                 <div class = "grid5 gridBox button2">
-                    <div class = "border">Psg 1</div>
+                    <!--<div class = "border">Psg 1</div>
                     <div class = "border">Psg 2</div>
                     <div class = "border">Psg 3</div>
                     <div class = "border">Psg 4</div>
-                    <div>Psg 5</div>
+                    <div>Psg 5</div>-->
                 </div>
 
                 <div class = "grid4 gridBox button2">
-                    <div class = "border">Q1 - Q15</div>
+                    <!--<div class = "border">Q1 - Q15</div>
                     <div class = "border">Q16 - Q30</div>
                     <div class = "border">Q31 - Q45</div>
-                    <div>Q46 - Q60</div>
+                    <div>Q46 - Q60</div>-->
                 </div>
 
                 <div class = "grid4 gridBox button2">
-                    <div class = "border">Prose Fiction</div>
+                    <!--<div class = "border">Prose Fiction</div>
                     <div class = "border">Social Sci.</div>
                     <div class = "border">Humanities</div>
-                    <div>Natural Sci.</div>
+                    <div>Natural Sci.</div>-->
                 </div>
 
                 <div class = "grid7 gridBox button2">
-                    <div class = "border">Psg 1</div>
+                    <!--<div class = "border">Psg 1</div>
                     <div class = "border">Psg 2</div>
                     <div class = "border">Psg 3</div>
                     <div class = "border">Psg 4</div>
                     <div class = "border">Psg 5</div>
                     <div class = "border">Psg 6</div>
-                    <div>Psg 7</div>
+                    <div>Psg 7</div>-->
                 </div>
 
                 <div class = "gridBox">
-                    A09
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    A10
+                    <p>A09</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -142,7 +126,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    72C
+                    <p>A10</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -158,7 +142,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    B05
+                    <p>72C</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -174,7 +158,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    71E
+                    <p>B05</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -190,7 +174,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    MC2
+                    <p>71E</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -206,7 +190,23 @@
                 </div>
 
                 <div class = "gridBox">
-                    69A
+                    <p>MC2</p>
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    <p>69A</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -267,7 +267,7 @@
 
             </div>
 
-            <div id = "homeworkTests" class = "tests">
+            <div class = "testHeaders">
 
                 <div class = "gridBox">
                     Tests
@@ -288,25 +288,12 @@
                 <div class = "gridBox">
                     Science
                 </div>
+            </div>
+
+            <div id = "homeworkTests" class = "tests">
 
                 <div class = "gridBox">
-                    B02
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    74F
+                    <p>B02</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -322,7 +309,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    72F
+                    <p>74F</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -338,7 +325,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    B04
+                    <p>72F</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -354,7 +341,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    71H
+                    <p>B04</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -370,7 +357,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    A11
+                    <p>71H</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -386,7 +373,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    74C
+                    <p>A11</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -402,7 +389,23 @@
                 </div>
 
                 <div class = "gridBox">
-                    71G
+                    <p>74C</p>
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    <p>71G</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -463,7 +466,7 @@
 
             </div>
 
-            <div id = "otherTests" class = "tests">
+            <div class = "testHeaders">
 
                 <div class = "gridBox">
                     Tests
@@ -484,25 +487,12 @@
                 <div class = "gridBox">
                     Science
                 </div>
+            </div>
+
+            <div id = "otherTests" class = "tests">
 
                 <div class = "gridBox">
-                    C02
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox button2">
-                </div>
-
-                <div class = "gridBox">
-                    73E
+                    <p>C02</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -518,7 +508,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    D02
+                    <p>73E</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -534,7 +524,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    72G
+                    <p>D02</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -550,7 +540,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    71A
+                    <p>72G</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -566,7 +556,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    68G
+                    <p>71A</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -582,7 +572,7 @@
                 </div>
 
                 <div class = "gridBox">
-                    68A
+                    <p>68G</p>
                 </div>
 
                 <div class = "gridBox button2">
@@ -598,7 +588,23 @@
                 </div>
 
                 <div class = "gridBox">
-                    67A
+                    <p>68A</p>
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox button2">
+                </div>
+
+                <div class = "gridBox">
+                    <p>67A</p>
                 </div>
 
                 <div class = "gridBox button2">
