--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -20,6 +20,29 @@
 <body onload="initialSetup()">
     <section id="section">
 
+        <div id = "testAnswersPopup" class = "input-block">
+
+            <div id = "answerToggle">
+            </div>
+
+            <div class = "input-row">
+
+                <div id = "leftArrow">
+                </div>
+
+                <div id = "passage">
+                </div>
+
+                <div id = "rightArrow">
+                </div>
+
+            </div>
+
+            <div id = "popupButtons">
+            </div>
+
+        </div>
+
         <div id = "inCenterTestsForm" class = "metaForm">
             <div id = "inCenterTestsTabs" class = "input-row">
 
