--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -21,23 +21,44 @@
     <section id="section">
         <div id = "testAnswersPopup" class = "input-block">
 
-            <div id = "answerToggle">
+            <div id = "popupHeader">
+                <div id = "headerText">
+                </div>
             </div>
 
-            <div class = "input-row">
+            <div id = "popupInfo" class = "input-row">
 
-                <div id = "leftArrow">
+                <div class = "side">
+                    <div class = "circle">
+                        <div id = "leftArrow">
+                            &#8249;
+                        </div>
+                    </div>
                 </div>
 
                 <div id = "passage">
                 </div>
 
-                <div id = "rightArrow">
+                <div class = "side">
+                    <div class = "circle">
+                        <div id = "rightArrow">
+                            &#8250;
+                        </div>
+                    </div>
                 </div>
 
             </div>
 
-            <div id = "popupButtons">
+            <div id = "popupButtons" class = "input-row-center">
+                <button class = "smallButton button" onclick="">
+                    Back
+                </button>
+                <button class = "smallButton button" onclick="">
+                    None
+                </button>
+                <button class = "smallButton button" onclick="">
+                    Submit
+                </button>
             </div>
 
         </div>
