session info working

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -1645,7 +1645,7 @@
                 </div>
                 
                 <div class = "input-row">
-                    <textarea placeholder="Session Notes" id = "textBlock" rows = "10" cols="80"></textarea>
+                    <textarea placeholder="Session Notes" id = "sectionNotes1" rows = "10" cols="80"></textarea>
                 </div>
 
                 <div class = "input-row">
