--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -125,16 +125,16 @@
                     <p class = "gridBox-p">MC3</p>
                 </div>
 
-                <div class = "grid5 gridBox button2" data-test = "MC3" data-section = "English" data-testType = "none">
+                <div class = "gridBox button2" data-test = "MC3" data-section = "English" data-testType = "none">
                 </div>
 
-                <div class = "grid4 gridBox button2" data-test = "MC3" data-section = "Math" data-testType = "none">
+                <div class = "gridBox button2" data-test = "MC3" data-section = "Math" data-testType = "none">
                 </div>
 
-                <div class = "grid4 gridBox button2" data-test = "MC3" data-section = "Reading" data-testType = "none">
+                <div class = "gridBox button2" data-test = "MC3" data-section = "Reading" data-testType = "none">
                 </div>
 
-                <div class = "grid7 gridBox button2" data-test = "MC3" data-section = "Science" data-testType = "none">
+                <div class = "gridBox button2" data-test = "MC3" data-section = "Science" data-testType = "none">
                 </div>
 
                 <div class = "gridBox" data-test = "A09">
