--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -68,7 +68,7 @@
         <p style="color: white;">We would love your feedback!</p>
         <p style="color: white;">Please include any suggestions and your name so we can get back to you with any questions</p>
         <textarea id="feedback" style="width: 300px; height: 200px;"></textarea>
-        <div id = "inCenterTestsForm" class = "metaForm">
+        <div id = "inCenterTestsForm" class = "metaForm noselect">
             <div id = "inCenterTestsTabs" class = "input-row">
 
                 <div class = "first testTab button2 selected" onclick="openForm('inCenterTestsForm', this)">
@@ -266,7 +266,7 @@
         </div>
 
 
-        <div id = "homeworkTestsForm" class = "metaForm">
+        <div id = "homeworkTestsForm" class = "metaForm noselect">
             <div id = "homeworkTestsTabs" class = "input-row">
 
                 <div class = "first testTab button2" onclick = "openForm('inCenterTestsForm', this)">
@@ -465,7 +465,7 @@
         </div>
 
 
-        <div id = "otherTestsForm" class = "metaForm">
+        <div id = "otherTestsForm" class = "metaForm noselect">
             <div id = "otherTestsTabs" class = "input-row">
 
                 <div class = "first testTab button2" onclick="openForm('inCenterTestsForm', this)">
@@ -664,7 +664,7 @@
         </div>
 
 
-        <div id = "englishLessonsForm" class = "metaForm">
+        <div id = "englishLessonsForm" class = "metaForm noselect">
             <div class="heading-block">
                 <h2>English</h2>
             </div>
@@ -847,7 +847,7 @@
         </div>
 
 
-        <div id = "mathLessonsForm" class = "metaForm">
+        <div id = "mathLessonsForm" class = "metaForm noselect">
             <div class="heading-block">
                 <h2>Math</h2>
             </div>
@@ -1294,7 +1294,7 @@
         </div>
 
 
-        <div id = "readingLessonsForm" class = "metaForm">
+        <div id = "readingLessonsForm" class = "metaForm noselect">
             <div class="heading-block">
                 <h2>Reading</h2>
             </div>
@@ -1429,7 +1429,7 @@
         </div>
 
 
-        <div id = "scienceLessonsForm" class = "metaForm">
+        <div id = "scienceLessonsForm" class = "metaForm noselect">
             <div class="heading-block">
                 <h2>Science</h2>
             </div>
