some validation stuff

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -1709,6 +1709,10 @@
 
             </div>
 
+            <div class="input-row">
+                <p id="errMsg" style="color: red;"></p>
+            </div>
+
 
         </form>
     </section>
