some validation things

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Daily Log</title>
     <link href="Daily Log.css" rel="stylesheet">
     </link>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
