--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -29,6 +29,8 @@
           <select id="activeStudents" name="active-students" onchange="activeStudentSelected(this)">
             <option disabled selected>Choose a student</option>
           </select>
+          <h4>Beta Update:</h4>
+          <p>The section taught, time, and section notes are being saved!</p>
         </div>
       </div>
     </section>
